# gfogle

./: .bazelignore  .bazelrc  .editorconfig  .gitignore  .prettierignore  .sdkmanrc  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE.bazel  maven_install.json  package-lock.json  package.json  settings.gradle  supervisord.conf
audit/: package-lock.json  package.json  tsconfig.json
audit/src/: audit.js
aws/: README.md  docker-compose.yml
aws/db/: package-lock.json  package.json
aws/db/users/migrations/: 20210328000000_create_users_table.js
blog/: README.md
blog/interviews/: README.md
blog/interviews/posts/: why_coding_matters.md
fmono/: .dockerignore  .gitignore  .jsdoc.js  .labrc.js  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
fmono/docker/: Dockerfile
fmono/docker/supervisord/: development.conf  production.conf
fmono/postman/: collection.json
fmono/src/: server.js
fmono/src/plugins/health/: index.js
fmono/src/plugins/health/controllers/: health.controller.js
fmono/src/plugins/health/test/controllers/: health.controller.test.js
fmono/src/plugins/home/: index.js
fmono/src/plugins/home/controllers/: home.controller.js
fmono/src/plugins/home/test/controllers/: home.controller.test.js
fmono/src/plugins/home/views/: index.ejs
fmono/src/plugins/shared/: index.js
fmono/src/plugins/shared/views/partials/: _header.ejs  _meta.ejs
fmono/src/plugins/ssr/: index.js
fmono/src/plugins/ssr/controllers/: ssr.controller.js
fmono/src/plugins/ssr/views/: index.ejs
fmono/test/fixtures/: fastify.fixtures.js
localstack/: README.md  localstack.yaml
modernweb/: README.md
mono/: index.html
nestmono/: Makefile  README.md  docker-compose.yml
nestmono/ecommerce/: .dockerignore  .htmlhintrc  .prettierignore  Dockerfile  Makefile  package-lock.json  package.json
nestmono/ecommerce/config/: jest.e2e.json  jest.unit.json
nestmono/ecommerce/src/: main.ts
nestmono/ecommerce/src/modules/forgot/: module.ts
nestmono/ecommerce/src/modules/forgot/assets/javascripts/: .eslintrc.json
nestmono/ecommerce/src/modules/forgot/assets/javascripts/entrypoints/: forgot.js
nestmono/ecommerce/src/modules/forgot/assets/stylesheets/entrypoints/: forgot.css
nestmono/ecommerce/src/modules/forgot/controllers/: controller.e2e.spec.ts  controller.spec.ts  controller.ts
nestmono/ecommerce/src/modules/forgot/services/: service.spec.ts  service.ts
nestmono/ecommerce/src/modules/forgot/views/: forgot.ejs
nestmono/ecommerce/src/modules/home/: module.ts
nestmono/ecommerce/src/modules/home/assets/javascripts/entrypoints/: home.jsx
nestmono/ecommerce/src/modules/home/controllers/: controller.e2e.spec.ts  controller.spec.ts  controller.ts
nestmono/ecommerce/src/modules/home/views/: home.ejs
nestmono/ecommerce/src/modules/login/: module.ts
nestmono/ecommerce/src/modules/login/controllers/: controller.e2e.spec.ts  controller.spec.ts  controller.ts
nestmono/ecommerce/src/modules/login/services/: service.spec.ts  service.ts
nestmono/ecommerce/src/modules/login/views/: login.ejs
nestmono/ecommerce/src/modules/shared/assets/stylesheets/entrypoints/: nav.css
nestmono/ecommerce/src/modules/shared/views/: header.ejs  polyfills.ejs
nestmono/ecommerce/usr/supervisord/: local.conf
tutorials/parallax/: purple-canyon.html  waves.html
web/: README.md
web/docker/: Dockerfile  Dockerfile.default  README.md  package.json
web/src/: index.js
web/src/plugins/health/: index.js
web/test/: index.test.js
www/: BUILD.bazel  Dockerfile  README.md  build.gradle
www/src/main/java/com/gfogle/: MainVerticle.java
www/src/main/java/com/gfogle/common/: BUILD.bazel
www/src/main/java/com/gfogle/common/services/: LoggingService.java  ReflectionService.java
www/src/main/java/com/gfogle/home/: HomeRouter.java
www/src/main/java/com/gfogle/home/controllers/: HomeViewController.java
www/src/main/java/vertx/playground/: MainVerticle.java
www/src/main/java/vertx/playground/shared/logging/: README.md
www/src/main/java/vertx/playground/shared/logging/config/: MaskingLayout.java
www/src/main/java/vertx/playground/shared/logging/helpers/: MaskingHelper.java
www/src/main/java/vertx/playground/shared/logging/services/: LoggingService.java
www/src/main/resources/: logback.xml
www/src/main/resources/templates/common/: _footer.html  _header.html
www/src/main/resources/templates/error/: 500.html
www/src/main/resources/templates/home/: index.html
www/src/test/java/vertx/playground/: MainVerticleTest.java
www/src/test/java/vertx/playground/shared/logging/helper/: MaskingHelperUnitTest.java
