package(default_visibility = ["//www:__subpackages__"])

load(
  "@rules_java//java:defs.bzl",
  "java_library"
)

java_library(
  name = "common",
  srcs = glob([
    "services/*.java"
  ]),
  deps = [
    "@maven//:io_vertx_vertx_core",
    "@maven//:io_vertx_vertx_web",
    "@maven//:io_vertx_vertx_web_common",
  ]
)
